Add API to download containers' logs
Related-to: TIE-175
