# moses/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   description: Toradex API to build and deploy applications running as containers on Torizon
-  version: 1.0.5
+  version: 1.0.6
   title: Torizon IDE-backend API
 consumes:
   - application/json
@@ -683,7 +683,7 @@ paths:
             items:
               $ref: "#/definitions/Process"
         404:
-          description: Device not found
+          description: Device or container not found
         500:
           $ref: "#/responses/InternalServerError_500"
         525:
@@ -710,7 +710,7 @@ paths:
           schema:
             $ref: "#/definitions/MemInfo"
         404:
-          description: Device not found
+          description: Device or container not found
         500:
           $ref: "#/responses/InternalServerError_500"
         533:
@@ -737,7 +737,42 @@ paths:
             items:
               $ref: "#/definitions/MountPoint"
         404:
-          description: Device not found
+          description: Device or container not found
+        500:
+          $ref: "#/responses/InternalServerError_500"
+        525:
+          $ref: "#/responses/RemoteDockerError_525"
+        533:
+          $ref: "#/responses/SSHError_533"
+        539:
+          $ref: "#/responses/SSHTunnelError_539"
+
+  /devices/{device_id}/containers/{container_id}/logs:
+
+    get:
+      operationId: container_getlogs
+      tags:
+        - Devices
+      summary: return container logs one chunk a time
+      description: return one or more lines of the log, waiting until it's available, this will allow clients to show logs in almost real time
+      parameters:
+        - $ref: "#/parameters/device_id"
+        - $ref: "#/parameters/container_id"
+        - name: restart
+          type: boolean
+          in: query
+          required: false
+          default: false
+          description: when true reads the lock back from beginning
+      responses:
+        200:
+          description: Returns list of storage informations
+          schema:
+            type: string
+        204:
+          description: No content, container is no longer running and log has ben fully read
+        404:
+          description: Device or container not found
         500:
           $ref: "#/responses/InternalServerError_500"
         525:
@@ -1216,6 +1251,49 @@ paths:
           $ref: "#/responses/SSHError_533"
         539:
           $ref: "#/responses/SSHTunnelError_539"
+
+  /applications/{application_id}/container_logs:
+
+    get:
+      operationId: application_getcontainer_logs
+      tags:
+        - Applications
+      summary: Get container log, chunk by chunk
+      description: Return one chunk of log (one or more lines), blocking if no data is available
+      parameters:
+        - $ref: "#/parameters/application_id"
+        - name: configuration
+          in: query
+          type: string
+          required: true
+          pattern: "(?:debug|release)"
+        - name: deviceid
+          in: query
+          type: string
+          required: true
+          pattern: "^[0-9]{8}$"
+        - name: restart
+          type: boolean
+          in: query
+          required: false
+          default: false
+          description: when true reads the lock back from beginning
+      responses:
+        200:
+          description: Returns application container
+          schema:
+            type: string
+        204:
+          description: No content
+        404:
+          description: Application not found
+        500:
+          $ref: "#/responses/InternalServerError_500"
+        525:
+          $ref: "#/responses/RemoteDockerError_525"
+        539:
+          $ref: "#/responses/SSHTunnelError_539"
+
 
   /applications/{application_id}/sdk/run:
 
